--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 # Enable or disable Swagger UI
 springdoc.swagger-ui.enabled=true
+
+#DATA-INIT
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:templates/db/data_init.sql
+spring.sql.init.mode=always
