--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ springdoc.swagger-ui.enabled=true
 
 #DATA-INIT
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.data-locations=classpath:templates/db/data_init.sql
+spring.sql.init.data-locations=classpath:db/data_init.sql
 spring.sql.init.mode=always
