--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,14 @@ springdoc.swagger-ui.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db/data_init.sql
 spring.sql.init.mode=always
+
+#EMAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=gadgetarium.service@gmail.com
+spring.mail.password=jxxydxluvhounmsd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.test-connection=false
+spring.mail.protocol=smtp
