--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.test-connection=false
 spring.mail.protocol=smtp
+
+#spring.profiles.active=aidana
