--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 
 src/main/resources/application-adil.properties
 src/main/resources/application-kutman.properties
+src/main/resources/application-aidana.properties
